// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`cleanup empty files 1`] = `
Array [
  "will-be-empty",
]
`;

exports[`cleanup falls back to greedy method 1`] = `
Array [
  ".projen/files.json",
  "delete.txt",
]
`;

exports[`cleanup only orphaned files 1`] = `
Array [
  ".projen/files.json",
  "not-this",
]
`;

exports[`cleanup uses cache file 1`] = `
Array [
  ".projen/files.json",
  "foo/bar.txt",
]
`;
